--- a/src/task/templates/test/index.html
+++ b/src/task/templates/test/index.html
@@ -6,6 +6,13 @@
 </head>
 <body>
 asasda
-{{title}}
+Contracts:
+<ul>
+    {% for contract in contracts %}
+        <li><a href="{% url 'man' contract.id %}">{{contract.name}}</a></li>
+    {% endfor %}
+</ul>
+
+
 </body>
 </html>
