excluded duplicate lines from query results

--- a/src/task/templates/test/manufacturers.html
+++ b/src/task/templates/test/manufacturers.html
@@ -11,5 +11,6 @@
     <li>{{manufacturer.name}} (id: {{manufacturer.id}}, time_created: {{manufacturer.time_created}})</li>
 {% endfor %}
 </ul>
+QuerySet: {{manufacturers}}
 </body>
 </html>
